# Jarvis

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.remote-desktop.example.toml  config.voice-clone.example.toml  docker-compose.run.yml  docker-compose.yml  docker-entrypoint.sh  docker-fetch-wheels.sh  install.ps1  install.sh  pyproject.toml
.github/workflows/: docker-publish.yml
.jarvis/: config.toml
jarvis/: __init__.py  __main__.py  cli.py  config.py  context.py  eventbus.py  machine.py  orchestrator.py  scaffold.py  state.py  web.py
jarvis/brain/: __init__.py  agent.py  hooks.py  persona.py  tools.py
jarvis/dashboard/: __init__.py  server.py
jarvis/dashboard/static/: app.js  board.css  canvas.html  canvas.js  index.html  mic-worklet.js  style.css
jarvis/presence/: __init__.py  manager.py  telegram_bot.py
jarvis/voice/: __init__.py  audiofx.py  chunker.py  diagnostics.py  link.py  listener.py  loop.py  ptt.py  remote.py  sfx.py  silero.py  stt.py  tts.py  vad.py  voicebank.py  wake.py
tests/: test_dashboard_board.py  test_hud_feed.py  test_packaging.py  test_presence.py  test_remote_voice.py  test_voice_logic.py
